--- a/app/globals.css
+++ b/app/globals.css
@@ -157,10 +157,14 @@ main {
   background-color: #131011;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
-
-.post img {
+.post img{
   width: 8rem;
   height: 6rem;
+}
+.post-image {
+  width: 8rem;
+  height: 6rem;
+  position: relative;
   object-fit: cover;
 }
 
